fixed navigation alignment bug

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,7 +3,6 @@
 .navigation {
   display: flex;
   align-items: center;
-  width: 100%;
   color: $color-primary;
   margin-left: auto;
   margin-right: auto;
